# safer-detection-ocr

./: .gitattributes  .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run-cli.bat  run-cli.sh  run-gui.bat  run-gui.sh
configs/: config.py  model_config.yaml  model_config_aug.yaml  model_config_no_aug.yaml
models/ocr/: digit_detector.pt
notebooks/: calculate_metrics.ipynb  metrics.ipynb  safer-notebook.ipynb
scripts/: check_plates.py  run_pipeline.py  train_yolo.py
src/detection/: yolo_detector.py
src/ocr/: ocr_engine.py  paddleocr_engine.py
src/pipeline/: batch_processor.py  main_pipeline.py
src/postprocessing/: text_cleaner.py
src/preprocessing/: image_loader.py  image_utils.py
src/renaming/: renamer.py
src/reporting/: report_generator.py
src/utils/: data_utils.py  logger.py  ocr_utils.py  yaml_loader.py
tests/: test_pipeline.py
ui/: QUICKSTART.md  README.md  __init__.py  app.py  pipeline_wrapper.py
ui/components/: __init__.py  metrics.py  progress.py  results_display.py  sidebar.py
ui/utils/: __init__.py  config.py  helpers.py
