[project]
name = "safer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "numpy==1.26.4",
    "pandas<3.0",
    "scikit-learn<1.8",
    "streamlit>=1.56.0",
    "supervision>=0.27.0.post2",
    "ultralytics>=8.4.31",
]
